--- a/client/index.ejs
+++ b/client/index.ejs
@@ -8,11 +8,13 @@
 
         <!--<link href="/css/client.css" type="text/css" rel="stylesheet"/>
         -->
+
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     </head>
 
     <body>
 
-        <div id="chart"></div>
+        <div id="main"></div>
 
         <script src="/js/app.js"></script>
     </body>
